- Updated BasicCOMApp to manage buttons correctly based on the current state of the app. - Fixed issue were NodeID would keep recalculating if the Node was enabled/disabled - Added Root node features for Default CDI and SNIP (untested) - Updated BasicCOMApp to persist Logging options the user may change - Bug fixes in the library

--- a/Projects/BasicCANApp/BasicCANApp.lpi
+++ b/Projects/BasicCANApp/BasicCANApp.lpi
@@ -36,7 +36,7 @@
         <PackageName Value="LCL"/>
       </Item2>
     </RequiredPackages>
-    <Units Count="3">
+    <Units Count="4">
       <Unit0>
         <Filename Value="BasicCANApp.lpr"/>
         <IsPartOfProject Value="True"/>
@@ -57,6 +57,11 @@
         <ResourceBaseClass Value="Form"/>
         <UnitName Value="Unit2"/>
       </Unit2>
+      <Unit3>
+        <Filename Value="..\..\Library\LCC\lcc_rootnode.pas"/>
+        <IsPartOfProject Value="True"/>
+        <UnitName Value="lcc_rootnode"/>
+      </Unit3>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
