- Fixed bugs pausing logging when logging window hidden - Fixed syncing with visibility of logging window and UI in IoEditor

--- a/Projects/IoEditor/IoEditor.lpi
+++ b/Projects/IoEditor/IoEditor.lpi
@@ -69,6 +69,7 @@
         <ComponentName Value="FormLogging"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
+        <UnitName Value="form_logging"/>
       </Unit4>
       <Unit5>
         <Filename Value="Forms\form_properties.pas"/>
