--- a/Projects/RaspberryPi_Hub/RPiHub.lpi
+++ b/Projects/RaspberryPi_Hub/RPiHub.lpi
@@ -50,6 +50,7 @@
         <ComponentName Value="Form1"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
+        <UnitName Value="form_main"/>
       </Unit1>
       <Unit2>
         <Filename Value="Forms\form_settings.pas"/>
