Updated the rr_cirkits app

--- a/Projects/RR-Circuits_UsbCan_Tester/rr_circuits.lpi
+++ b/Projects/RR-Circuits_UsbCan_Tester/rr_circuits.lpi
@@ -47,6 +47,7 @@
         <ComponentName Value="FormSettings"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
+        <UnitName Value="form_settings"/>
       </Unit1>
       <Unit2>
         <Filename Value="form_template.pas"/>
@@ -102,7 +103,6 @@ if TargetOS = 'linux' then
     </CodeGeneration>
     <Linking>
       <Debugging>
-        <GenerateDebugInfo Value="False"/>
         <UseValgrind Value="True"/>
       </Debugging>
       <Options>
