- Fixed Projects to compile with some of the library changes.

--- a/Projects/BasicCANApp/BasicCANApp.lpi
+++ b/Projects/BasicCANApp/BasicCANApp.lpi
@@ -105,6 +105,9 @@ if TargetOS = 'linux' then
         </Win32>
       </Options>
     </Linking>
+    <Other>
+      <CompilerPath Value="$(CompPath)"/>
+    </Other>
   </CompilerOptions>
   <Debugging>
     <Exceptions Count="3">
