--- a/Projects/BasicCANandEthernetApp/BasicCANandEthernetApp.lpi
+++ b/Projects/BasicCANandEthernetApp/BasicCANandEthernetApp.lpi
@@ -99,6 +99,9 @@ if TargetOS = 'linux' then
         </Win32>
       </Options>
     </Linking>
+    <Other>
+      <CompilerPath Value="$(CompPath)"/>
+    </Other>
   </CompilerOptions>
   <Debugging>
     <Exceptions Count="3">
