- Fixed path in examples since they were moved to a different folder level with respect to the library files.

--- a/Projects/Lazarus/IoEditor/IoEditor.lpi
+++ b/Projects/Lazarus/IoEditor/IoEditor.lpi
@@ -87,7 +87,7 @@
     </Target>
     <SearchPaths>
       <IncludeFiles Value="$(ProjOutDir)"/>
-      <OtherUnitFiles Value="..\..\Library\Lib;Forms"/>
+      <OtherUnitFiles Value="..\..\..\Library\Lib;Forms"/>
       <UnitOutputDirectory Value="lib\$(TargetCPU)-$(TargetOS)"/>
     </SearchPaths>
     <Conditionals Value="if TargetOS = 'darwin' then
