--- a/Projects/Lazarus/RR-Circuits_UsbCan_Tester/rr_circuits.lpi
+++ b/Projects/Lazarus/RR-Circuits_UsbCan_Tester/rr_circuits.lpi
@@ -78,7 +78,7 @@
     </Target>
     <SearchPaths>
       <IncludeFiles Value="$(ProjOutDir)"/>
-      <OtherUnitFiles Value="..\..\Library\Lib"/>
+      <OtherUnitFiles Value="..\..\..\Library\Lib"/>
       <UnitOutputDirectory Value="lib\$(TargetCPU)-$(TargetOS)"/>
     </SearchPaths>
     <Conditionals Value="if TargetOS = 'darwin' then
@@ -111,6 +111,9 @@ if TargetOS = 'linux' then
         </Win32>
       </Options>
     </Linking>
+    <Other>
+      <CompilerPath Value="$(CompPath)"/>
+    </Other>
   </CompilerOptions>
   <Debugging>
     <Exceptions Count="3">
