--- a/Projects/Lazarus/BasicCANandEthernetApp/BasicCANandEthernetApp.lpi
+++ b/Projects/Lazarus/BasicCANandEthernetApp/BasicCANandEthernetApp.lpi
@@ -66,7 +66,7 @@
     </Target>
     <SearchPaths>
       <IncludeFiles Value="$(ProjOutDir)"/>
-      <OtherUnitFiles Value="..\..\Library\Lib"/>
+      <OtherUnitFiles Value="..\..\..\Library\Lib"/>
       <UnitOutputDirectory Value="lib\$(TargetCPU)-$(TargetOS)"/>
     </SearchPaths>
     <Conditionals Value="if TargetOS = 'darwin' then
