--- a/Projects/Lazarus/CDI_Renderer/CDI_Parser.lpi
+++ b/Projects/Lazarus/CDI_Renderer/CDI_Parser.lpi
@@ -54,6 +54,7 @@
   UsageCustomOptions += ' -k-macosx_version_min -k10.5';
  // UsageCustomOptions += ' -XR/Developer/SDKs/MacOSX10.5.sdk/';
 end;"/>
+            <CompilerPath Value="$(CompPath)"/>
           </Other>
         </CompilerOptions>
       </Item2>
@@ -99,7 +100,7 @@ end;"/>
     </Target>
     <SearchPaths>
       <IncludeFiles Value="$(ProjOutDir)"/>
-      <OtherUnitFiles Value="..\..\synapse40\source\lib;..\..\Library"/>
+      <OtherUnitFiles Value="..\..\..\Library"/>
       <UnitOutputDirectory Value="lib\$(TargetCPU)-$(TargetOS)"/>
     </SearchPaths>
     <CodeGeneration>
@@ -124,6 +125,7 @@ end;"/>
   UsageCustomOptions += ' -k-macosx_version_min -k10.5';
  // UsageCustomOptions += ' -XR/Developer/SDKs/MacOSX10.5.sdk/';
 end;"/>
+      <CompilerPath Value="$(CompPath)"/>
     </Other>
   </CompilerOptions>
   <Debugging>
