Raspberry Pi working...

--- a/Projects/Lazarus/RaspberryPi_Hub/RPiHub.lpi
+++ b/Projects/Lazarus/RaspberryPi_Hub/RPiHub.lpi
@@ -9,7 +9,6 @@
       <Title Value="RPiHub"/>
       <ResourceType Value="res"/>
       <UseXPManifest Value="True"/>
-      <Icon Value="0"/>
     </General>
     <i18n>
       <EnableI18N LFM="False"/>
@@ -85,11 +84,11 @@
     <Version Value="11"/>
     <PathDelim Value="\"/>
     <Target>
-      <Filename Value="Compiled_Binaries\$(TargetCPU)-$(TargetOS)\RPiHub.app\Contents\MacOS\RPiHub"/>
+      <Filename Value="Compiled_Binaries\$(TargetCPU)-$(TargetOS)\RPiHub"/>
     </Target>
     <SearchPaths>
       <IncludeFiles Value="$(ProjOutDir)"/>
-      <OtherUnitFiles Value="..\..\..\Library\Lib;Forms"/>
+      <OtherUnitFiles Value="Forms;..\..\..\Library\Lib"/>
       <UnitOutputDirectory Value="lib\$(TargetCPU)-$(TargetOS)"/>
     </SearchPaths>
     <Conditionals Value="if TargetOS = 'darwin' then
@@ -122,9 +121,6 @@ if TargetOS = 'linux' then
         </Win32>
       </Options>
     </Linking>
-    <Other>
-      <CompilerPath Value="$(CompPath)"/>
-    </Other>
   </CompilerOptions>
   <Debugging>
     <Exceptions Count="3">
@@ -139,4 +135,4 @@ if TargetOS = 'linux' then
       </Item3>
     </Exceptions>
   </Debugging>
-</CONFIG>
+</CONFIG>
