- HUGE update to examine and remove all implicit string warnings and bit sizes for calculations.  Now has minimal warning during the LccLib compile....  Still need to test and see if anything broke.

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,5 @@ Projects/Lazarus/Template/lib
 Projects/Lazarus/Template/Compiled_Binaries
 Projects/Delphi/Template/iOSSimulator
 Projects/Delphi/Template/OSX32
+Projects/LazarusRaspberryPi/Gpio_Demo/Compiled_Binaries
+Projects/LazarusRaspberryPi/Gpio_Demo/lib
