--- a/Projects/LazarusRaspberryPi/Gpio_Demo/project1.lpi
+++ b/Projects/LazarusRaspberryPi/Gpio_Demo/project1.lpi
@@ -7,7 +7,6 @@
       <ResourceType Value="res"/>
       <UseXPManifest Value="True"/>
       <Icon Value="0"/>
-      <ActiveWindowIndexAtStart Value="0"/>
     </General>
     <i18n>
       <EnableI18N LFM="False"/>
@@ -33,13 +32,10 @@
         <PackageName Value="LCL"/>
       </Item1>
     </RequiredPackages>
-    <Units Count="22">
+    <Units Count="26">
       <Unit0>
         <Filename Value="project1.lpr"/>
         <IsPartOfProject Value="True"/>
-        <UnitName Value="project1"/>
-        <WindowIndex Value="0"/>
-        <TopLine Value="1"/>
         <CursorPos X="15" Y="10"/>
         <UsageCount Value="201"/>
       </Unit0>
@@ -50,11 +46,8 @@
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
         <UnitName Value="Unit1"/>
-        <IsVisibleTab Value="True"/>
-        <EditorIndex Value="0"/>
-        <WindowIndex Value="0"/>
-        <TopLine Value="152"/>
-        <CursorPos X="59" Y="169"/>
+        <TopLine Value="78"/>
+        <CursorPos X="3" Y="110"/>
         <UsageCount Value="201"/>
         <Loaded Value="True"/>
         <LoadedDesigner Value="True"/>
@@ -62,38 +55,29 @@
       <Unit2>
         <Filename Value="unit2.pas"/>
         <UnitName Value="Unit2"/>
-        <WindowIndex Value="0"/>
-        <TopLine Value="1"/>
-        <CursorPos X="1" Y="12"/>
+        <CursorPos Y="12"/>
         <UsageCount Value="205"/>
       </Unit2>
       <Unit3>
         <Filename Value="hwiringpi.pas"/>
-        <UnitName Value="hwiringpi"/>
-        <WindowIndex Value="0"/>
         <TopLine Value="19"/>
-        <CursorPos X="1" Y="33"/>
+        <CursorPos Y="33"/>
         <UsageCount Value="66"/>
       </Unit3>
       <Unit4>
         <Filename Value="wiringPi_c.pas"/>
-        <UnitName Value="wiringPi_c"/>
-        <WindowIndex Value="0"/>
         <TopLine Value="132"/>
-        <CursorPos X="1" Y="552"/>
+        <CursorPos Y="552"/>
         <UsageCount Value="100"/>
       </Unit4>
       <Unit5>
         <Filename Value="wiringpi.pas"/>
-        <UnitName Value="wiringpi"/>
-        <WindowIndex Value="0"/>
         <TopLine Value="345"/>
         <CursorPos X="23" Y="359"/>
         <UsageCount Value="201"/>
       </Unit5>
       <Unit6>
         <Filename Value="wiringPi/wiringPi.c"/>
-        <WindowIndex Value="0"/>
         <TopLine Value="311"/>
         <CursorPos X="7" Y="311"/>
         <UsageCount Value="65"/>
@@ -102,54 +86,42 @@
       <Unit7>
         <Filename Value="../Proj_LED2/unit1.pas"/>
         <UnitName Value="Unit1"/>
-        <WindowIndex Value="0"/>
-        <TopLine Value="1"/>
-        <CursorPos X="1" Y="1"/>
         <UsageCount Value="46"/>
       </Unit7>
       <Unit8>
         <Filename Value="/usr/lib/lazarus/0.9.30.4/lcl/intfgraphics.pas"/>
         <UnitName Value="IntfGraphics"/>
-        <WindowIndex Value="0"/>
         <TopLine Value="2621"/>
-        <CursorPos X="1" Y="2635"/>
+        <CursorPos Y="2635"/>
         <UsageCount Value="9"/>
       </Unit8>
       <Unit9>
         <Filename Value="/usr/lib/lazarus/0.9.30.4/lcl/interfaces/gtk2/gtk2proc.inc"/>
-        <WindowIndex Value="0"/>
         <TopLine Value="127"/>
-        <CursorPos X="1" Y="141"/>
+        <CursorPos Y="141"/>
         <UsageCount Value="10"/>
       </Unit9>
       <Unit10>
         <Filename Value="armgpio.pas"/>
         <UnitName Value="armGpio"/>
-        <WindowIndex Value="0"/>
         <TopLine Value="34"/>
         <CursorPos X="83" Y="229"/>
         <UsageCount Value="24"/>
       </Unit10>
       <Unit11>
         <Filename Value="fastGPIO.lpr"/>
-        <UnitName Value="fastGPIO"/>
-        <WindowIndex Value="0"/>
-        <TopLine Value="1"/>
-        <CursorPos X="1" Y="40"/>
+        <CursorPos Y="40"/>
         <UsageCount Value="13"/>
       </Unit11>
       <Unit12>
         <Filename Value="../Proj_LED/unit1.pas"/>
         <UnitName Value="Unit1"/>
-        <WindowIndex Value="0"/>
         <TopLine Value="69"/>
         <CursorPos X="67" Y="82"/>
         <UsageCount Value="16"/>
       </Unit12>
       <Unit13>
         <Filename Value="../Proj_LED/hwiringpi.pas"/>
-        <UnitName Value="hwiringpi"/>
-        <WindowIndex Value="0"/>
         <TopLine Value="54"/>
         <CursorPos X="48" Y="39"/>
         <UsageCount Value="23"/>
@@ -157,15 +129,12 @@
       <Unit14>
         <Filename Value="wiringpi_i.pas"/>
         <UnitName Value="wiringpi"/>
-        <WindowIndex Value="0"/>
         <TopLine Value="373"/>
         <CursorPos X="44" Y="428"/>
         <UsageCount Value="44"/>
       </Unit14>
       <Unit15>
         <Filename Value="pi_ioII.pas"/>
-        <UnitName Value="pi_ioII"/>
-        <WindowIndex Value="0"/>
         <TopLine Value="101"/>
         <CursorPos X="6" Y="579"/>
         <UsageCount Value="10"/>
@@ -173,14 +142,10 @@
       <Unit16>
         <Filename Value="pigpio.pas"/>
         <UnitName Value="PiGpio"/>
-        <WindowIndex Value="0"/>
-        <TopLine Value="1"/>
-        <CursorPos X="1" Y="1"/>
         <UsageCount Value="56"/>
       </Unit16>
       <Unit17>
         <Filename Value="wiringPi.c"/>
-        <WindowIndex Value="0"/>
         <TopLine Value="441"/>
         <CursorPos X="35" Y="514"/>
         <UsageCount Value="54"/>
@@ -189,154 +154,177 @@
       <Unit18>
         <Filename Value="unit3.pas"/>
         <UnitName Value="Unit3"/>
-        <WindowIndex Value="0"/>
-        <TopLine Value="1"/>
-        <CursorPos X="1" Y="10"/>
+        <CursorPos Y="10"/>
         <UsageCount Value="80"/>
       </Unit18>
       <Unit19>
         <Filename Value="../lazwiringpi_eredeti/hwiringpi.pas"/>
-        <UnitName Value="hwiringpi"/>
-        <WindowIndex Value="0"/>
         <TopLine Value="62"/>
-        <CursorPos X="1" Y="1"/>
         <UsageCount Value="17"/>
       </Unit19>
       <Unit20>
         <Filename Value="/usr/local/share/fpcsrc/rtl/unix/sysutils.pp"/>
-        <UnitName Value="sysutils"/>
-        <WindowIndex Value="0"/>
-        <TopLine Value="1"/>
         <CursorPos X="31" Y="16"/>
         <UsageCount Value="10"/>
       </Unit20>
       <Unit21>
         <Filename Value="/usr/local/share/fpcsrc/rtl/objpas/sysutils/datih.inc"/>
-        <EditorIndex Value="1"/>
-        <WindowIndex Value="0"/>
+        <EditorIndex Value="-1"/>
         <TopLine Value="84"/>
         <CursorPos X="58" Y="100"/>
         <UsageCount Value="10"/>
-        <Loaded Value="True"/>
       </Unit21>
+      <Unit22>
+        <Filename Value="../../../Library/LCC/lcc_raspberrypi_gpio.pas"/>
+        <EditorIndex Value="1"/>
+        <TopLine Value="76"/>
+        <CursorPos X="3" Y="133"/>
+        <UsageCount Value="11"/>
+        <Loaded Value="True"/>
+      </Unit22>
+      <Unit23>
+        <Filename Value="/usr/local/fpc/source/rtl/linux/ostypes.inc"/>
+        <EditorIndex Value="-1"/>
+        <TopLine Value="271"/>
+        <CursorPos X="5" Y="286"/>
+        <UsageCount Value="10"/>
+      </Unit23>
+      <Unit24>
+        <Filename Value="../../../Library/LCC/lcc_raspberrypi_spiport.pas"/>
+        <IsVisibleTab Value="True"/>
+        <EditorIndex Value="2"/>
+        <CursorPos X="59" Y="22"/>
+        <UsageCount Value="10"/>
+        <Loaded Value="True"/>
+      </Unit24>
+      <Unit25>
+        <Filename Value="../../../Library/LCC/lcc_compilers.inc"/>
+        <EditorIndex Value="3"/>
+        <CursorPos X="13" Y="15"/>
+        <UsageCount Value="10"/>
+        <Loaded Value="True"/>
+      </Unit25>
     </Units>
-    <JumpHistory Count="29" HistoryIndex="28">
+    <JumpHistory Count="30" HistoryIndex="29">
       <Position1>
         <Filename Value="unit1.pas"/>
-        <Caret Line="86" Column="31" TopLine="67"/>
+        <Caret Line="91" Column="23" TopLine="66"/>
       </Position1>
       <Position2>
         <Filename Value="unit1.pas"/>
-        <Caret Line="88" Column="31" TopLine="69"/>
+        <Caret Line="185" Column="11" TopLine="167"/>
       </Position2>
       <Position3>
         <Filename Value="unit1.pas"/>
-        <Caret Line="99" Column="3" TopLine="79"/>
+        <Caret Line="186" TopLine="167"/>
       </Position3>
       <Position4>
         <Filename Value="unit1.pas"/>
-        <Caret Line="98" Column="3" TopLine="78"/>
+        <Caret Line="132" TopLine="117"/>
       </Position4>
       <Position5>
         <Filename Value="unit1.pas"/>
-        <Caret Line="23" Column="30" TopLine="21"/>
+        <Caret Line="133" TopLine="78"/>
       </Position5>
       <Position6>
         <Filename Value="unit1.pas"/>
-        <Caret Line="24" Column="28" TopLine="21"/>
+        <Caret Line="86" TopLine="78"/>
       </Position6>
       <Position7>
-        <Filename Value="unit1.pas"/>
-        <Caret Line="146" Column="7" TopLine="84"/>
+        <Filename Value="../../../Library/LCC/lcc_raspberrypi_gpio.pas"/>
+        <Caret Line="132" TopLine="117"/>
       </Position7>
       <Position8>
-        <Filename Value="unit1.pas"/>
-        <Caret Line="145" Column="7" TopLine="118"/>
+        <Filename Value="../../../Library/LCC/lcc_raspberrypi_gpio.pas"/>
+        <Caret Line="133" TopLine="117"/>
       </Position8>
       <Position9>
-        <Filename Value="unit1.pas"/>
-        <Caret Line="85" Column="35" TopLine="85"/>
+        <Filename Value="../../../Library/LCC/lcc_raspberrypi_gpio.pas"/>
+        <Caret Line="134" TopLine="117"/>
       </Position9>
       <Position10>
-        <Filename Value="unit1.pas"/>
-        <Caret Line="87" Column="35" TopLine="60"/>
+        <Filename Value="../../../Library/LCC/lcc_raspberrypi_gpio.pas"/>
+        <Caret Line="135" TopLine="117"/>
       </Position10>
       <Position11>
-        <Filename Value="unit1.pas"/>
-        <Caret Line="141" Column="5" TopLine="121"/>
+        <Filename Value="../../../Library/LCC/lcc_raspberrypi_gpio.pas"/>
+        <Caret Line="137" TopLine="117"/>
       </Position11>
       <Position12>
-        <Filename Value="unit1.pas"/>
-        <Caret Line="150" Column="4" TopLine="123"/>
+        <Filename Value="../../../Library/LCC/lcc_raspberrypi_gpio.pas"/>
+        <Caret Line="140" TopLine="117"/>
       </Position12>
       <Position13>
         <Filename Value="unit1.pas"/>
-        <Caret Line="151" Column="4" TopLine="124"/>
+        <Caret Line="88" TopLine="78"/>
       </Position13>
       <Position14>
-        <Filename Value="unit1.pas"/>
-        <Caret Line="21" Column="29" TopLine="10"/>
+        <Filename Value="../../../Library/LCC/lcc_raspberrypi_gpio.pas"/>
+        <Caret Line="176" TopLine="161"/>
       </Position14>
       <Position15>
         <Filename Value="unit1.pas"/>
-        <Caret Line="72" Column="18" TopLine="60"/>
+        <Caret Line="86" TopLine="78"/>
       </Position15>
       <Position16>
         <Filename Value="unit1.pas"/>
-        <Caret Line="146" Column="20" TopLine="127"/>
+        <Caret Line="134" TopLine="119"/>
       </Position16>
       <Position17>
-        <Filename Value="unit1.pas"/>
-        <Caret Line="25" Column="23" TopLine="1"/>
+        <Filename Value="../../../Library/LCC/lcc_raspberrypi_gpio.pas"/>
+        <Caret Line="176" TopLine="161"/>
       </Position17>
       <Position18>
         <Filename Value="unit1.pas"/>
-        <Caret Line="24" Column="23" TopLine="1"/>
+        <Caret Line="92" TopLine="81"/>
       </Position18>
       <Position19>
-        <Filename Value="unit1.pas"/>
-        <Caret Line="23" Column="23" TopLine="1"/>
+        <Filename Value="../../../Library/LCC/lcc_raspberrypi_gpio.pas"/>
+        <Caret Line="176" TopLine="161"/>
       </Position19>
       <Position20>
         <Filename Value="unit1.pas"/>
-        <Caret Line="18" Column="47" TopLine="1"/>
+        <Caret Line="86" TopLine="80"/>
       </Position20>
       <Position21>
-        <Filename Value="unit1.pas"/>
-        <Caret Line="113" Column="21" TopLine="98"/>
+        <Filename Value="../../../Library/LCC/lcc_raspberrypi_gpio.pas"/>
+        <Caret Line="132" TopLine="117"/>
       </Position21>
       <Position22>
-        <Filename Value="unit1.pas"/>
-        <Caret Line="74" Column="17" TopLine="56"/>
+        <Filename Value="../../../Library/LCC/lcc_raspberrypi_gpio.pas"/>
+        <Caret Line="133" TopLine="117"/>
       </Position22>
       <Position23>
-        <Filename Value="unit1.pas"/>
-        <Caret Line="148" Column="25" TopLine="125"/>
+        <Filename Value="../../../Library/LCC/lcc_raspberrypi_gpio.pas"/>
+        <Caret Line="134" Column="40" TopLine="117"/>
       </Position23>
       <Position24>
-        <Filename Value="unit1.pas"/>
-        <Caret Line="18" Column="81" TopLine="1"/>
+        <Filename Value="../../../Library/LCC/lcc_raspberrypi_gpio.pas"/>
+        <Caret Line="135" TopLine="117"/>
       </Position24>
       <Position25>
-        <Filename Value="unit1.pas"/>
-        <Caret Line="12" Column="18" TopLine="1"/>
+        <Filename Value="../../../Library/LCC/lcc_raspberrypi_gpio.pas"/>
+        <Caret Line="137" TopLine="117"/>
       </Position25>
       <Position26>
-        <Filename Value="unit1.pas"/>
-        <Caret Line="25" Column="47" TopLine="1"/>
+        <Filename Value="../../../Library/LCC/lcc_raspberrypi_gpio.pas"/>
+        <Caret Line="140" TopLine="117"/>
       </Position26>
       <Position27>
         <Filename Value="unit1.pas"/>
-        <Caret Line="158" Column="17" TopLine="142"/>
+        <Caret Line="89" Column="11" TopLine="80"/>
       </Position27>
       <Position28>
         <Filename Value="unit1.pas"/>
-        <Caret Line="154" Column="6" TopLine="142"/>
+        <Caret Line="86" TopLine="80"/>
       </Position28>
       <Position29>
-        <Filename Value="unit1.pas"/>
-        <Caret Line="169" Column="62" TopLine="154"/>
+        <Filename Value="../../../Library/LCC/lcc_raspberrypi_spiport.pas"/>
       </Position29>
+      <Position30>
+        <Filename Value="../../../Library/LCC/lcc_raspberrypi_spiport.pas"/>
+        <Caret Line="9" Column="15"/>
+      </Position30>
     </JumpHistory>
   </ProjectOptions>
   <CompilerOptions>
@@ -356,14 +344,31 @@
         </Win32>
       </Options>
     </Linking>
-    <Other>
-      <CompilerMessages>
-        <UseMsgFile Value="True"/>
-      </CompilerMessages>
-      <CompilerPath Value="$(CompPath)"/>
-    </Other>
   </CompilerOptions>
   <Debugging>
+    <BreakPoints Count="3">
+      <Item1>
+        <Kind Value="bpkSource"/>
+        <WatchScope Value="wpsLocal"/>
+        <WatchKind Value="wpkWrite"/>
+        <Source Value="unit1.pas"/>
+        <Line Value="145"/>
+      </Item1>
+      <Item2>
+        <Kind Value="bpkSource"/>
+        <WatchScope Value="wpsLocal"/>
+        <WatchKind Value="wpkWrite"/>
+        <Source Value="unit1.pas"/>
+        <Line Value="93"/>
+      </Item2>
+      <Item3>
+        <Kind Value="bpkSource"/>
+        <WatchScope Value="wpsLocal"/>
+        <WatchKind Value="wpkWrite"/>
+        <Source Value="unit1.pas"/>
+        <Line Value="86"/>
+      </Item3>
+    </BreakPoints>
     <Exceptions Count="3">
       <Item1>
         <Name Value="EAbort"/>
@@ -376,5 +381,4 @@
       </Item3>
     </Exceptions>
   </Debugging>
-  <EditorMacros Count="0"/>
 </CONFIG>
