- Fixed library to compile under Windows

--- a/Projects/Lazarus/RR-Circuits_UsbCan_Tester/rr_circuits.lpi
+++ b/Projects/Lazarus/RR-Circuits_UsbCan_Tester/rr_circuits.lpi
@@ -54,6 +54,7 @@
         <ComponentName Value="FormTemplate"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
+        <UnitName Value="form_template"/>
       </Unit2>
       <Unit3>
         <Filename Value="form_logging.pas"/>
