--- a/Projects/Lazarus/IoEditor/IoEditor.lpi
+++ b/Projects/Lazarus/IoEditor/IoEditor.lpi
@@ -58,6 +58,7 @@
         <ComponentName Value="FormSettings"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
+        <UnitName Value="form_settings"/>
       </Unit2>
       <Unit3>
         <Filename Value="X:\Library\LCC\lcc_rootnode.pas"/>
@@ -120,9 +121,6 @@ if TargetOS = 'linux' then
         </Win32>
       </Options>
     </Linking>
-    <Other>
-      <CompilerPath Value="$(CompPath)"/>
-    </Other>
   </CompilerOptions>
   <Debugging>
     <Exceptions Count="3">
@@ -137,4 +135,4 @@ if TargetOS = 'linux' then
       </Item3>
     </Exceptions>
   </Debugging>
-</CONFIG>
+</CONFIG>
