- Updates to example projects

--- a/Projects/Lazarus/RR-Circuits_UsbCan_Tester/rr_circuits.lpi
+++ b/Projects/Lazarus/RR-Circuits_UsbCan_Tester/rr_circuits.lpi
@@ -103,6 +103,7 @@ if TargetOS = 'linux' then
     <Linking>
       <Debugging>
         <UseValgrind Value="True"/>
+        <UseExternalDbgSyms Value="True"/>
       </Debugging>
       <Options>
         <Win32>
