--- a/Projects/Lazarus/RR-Circuits_Mulit_Node/project_template.lpi
+++ b/Projects/Lazarus/RR-Circuits_Mulit_Node/project_template.lpi
@@ -98,6 +98,7 @@ if TargetOS = 'linux' then
     </CodeGeneration>
     <Linking>
       <Debugging>
+        <DebugInfoType Value="dsDwarf2Set"/>
         <UseValgrind Value="True"/>
       </Debugging>
       <Options>
