- RPiCAN console app working and the bootloader code is working.  Need to be sure I blank out the Configuraion bits too so I don't brick the MCU

--- a/Projects/LazarusRaspberryPi/Ethernet_Hub_Console/RPiCAN.lpi
+++ b/Projects/LazarusRaspberryPi/Ethernet_Hub_Console/RPiCAN.lpi
@@ -47,7 +47,7 @@
     </Target>
     <SearchPaths>
       <IncludeFiles Value="$(ProjOutDir)"/>
-      <OtherUnitFiles Value="../../../Library/LCC;../../../Library/Synapse_LCC"/>
+      <OtherUnitFiles Value="../../../Library/LCC;../../../Library/Synapse_LCC;../../../Library/Lib"/>
       <UnitOutputDirectory Value="lib/$(TargetCPU)-$(TargetOS)"/>
     </SearchPaths>
   </CompilerOptions>
