--- a/Projects/LazarusRaspberryPi/Ethernet_Hub_Development_Sync_Console/RPiSync.lpi
+++ b/Projects/LazarusRaspberryPi/Ethernet_Hub_Development_Sync_Console/RPiSync.lpi
@@ -8,7 +8,7 @@
       </Flags>
       <SessionStorage Value="InProjectDir"/>
       <MainUnit Value="0"/>
-      <Title Value="RPi CAN Hub"/>
+      <Title Value="PiCanSync"/>
       <UseAppBundle Value="False"/>
       <ResourceType Value="res"/>
     </General>
@@ -29,32 +29,23 @@
         <FormatVersion Value="1"/>
       </local>
     </RunParams>
-    <Units Count="2">
+    <Units Count="1">
       <Unit0>
-        <Filename Value="RPiCAN.pas"/>
+        <Filename Value="RPiSync.lpr"/>
         <IsPartOfProject Value="True"/>
       </Unit0>
-      <Unit1>
-        <Filename Value="../../../Library/LCC/lcc_raspberrypi.pas"/>
-        <IsPartOfProject Value="True"/>
-      </Unit1>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
     <Version Value="11"/>
     <Target>
-      <Filename Value="rpican"/>
+      <Filename Value="rpisync"/>
     </Target>
     <SearchPaths>
       <IncludeFiles Value="$(ProjOutDir)"/>
-      <OtherUnitFiles Value="../../../Library/LCC;../../../Library/Synapse_LCC;../../../Library/Lib"/>
+      <OtherUnitFiles Value="/home/pi/Documents/LccLib/Library/Synapse_LCC/"/>
       <UnitOutputDirectory Value="lib/$(TargetCPU)-$(TargetOS)"/>
     </SearchPaths>
-    <Linking>
-      <Debugging>
-        <GenerateDebugInfo Value="False"/>
-      </Debugging>
-    </Linking>
   </CompilerOptions>
   <Debugging>
     <Exceptions Count="3">
