--- a/Projects/Lazarus/RR-Circuits_Mulit_Node/project_template.lpi
+++ b/Projects/Lazarus/RR-Circuits_Mulit_Node/project_template.lpi
@@ -62,6 +62,7 @@
         <ComponentName Value="FormLogging"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
+        <UnitName Value="form_logging"/>
       </Unit3>
     </Units>
   </ProjectOptions>
