change executable name in new example

--- a/Projects/LazarusRaspberryPi/RPiOlcbNode/rpinode.lpi
+++ b/Projects/LazarusRaspberryPi/RPiOlcbNode/rpinode.lpi
@@ -39,7 +39,7 @@
   <CompilerOptions>
     <Version Value="11"/>
     <Target>
-      <Filename Value="rpican"/>
+      <Filename Value="rpinode"/>
     </Target>
     <SearchPaths>
       <IncludeFiles Value="$(ProjOutDir)"/>
