--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,5 @@ Projects/Delphi/Template/iOSSimulator
 Projects/Delphi/Template/OSX32
 Projects/LazarusRaspberryPi/Gpio_Demo/Compiled_Binaries
 Projects/LazarusRaspberryPi/Gpio_Demo/lib
+Projects/Delphi/Template2/Template_LccLib_Project.groupproj.local
+Projects/Delphi/Template2/Template_LccLib_Project.~dsk
