--- a/Projects/Lazarus/LccEmpireModeler/empiremodeler.lpi
+++ b/Projects/Lazarus/LccEmpireModeler/empiremodeler.lpi
@@ -60,7 +60,7 @@
       <Unit3>
         <Filename Value="ObjectOptionsForms\unitdistrictwizardform.pas"/>
         <IsPartOfProject Value="True"/>
-        <ComponentName Value="FormSegmentWizard"/>
+        <ComponentName Value="FormDistrictWizard"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
         <UnitName Value="unitdistrictwizardform"/>
